...
      </View>
    );
  }

  return (
    <View
      testID="e2e-screen-video__param_id"
      className="flex-1 bg-background"
      style={isLandscape ? { paddingLeft: insets.left, paddingRight: insets.right } : undefined}
    >
      <VideoToolbar
        filename={file.filename}
        isFavorite={file.isFavorite}
...
